[gd_scene load_steps=8 format=3 uid="uid://ben62w4xd17rc"]

[ext_resource type="Script" path="res://Autoloads/SoundManager.gd" id="1_8kq0e"]
[ext_resource type="AudioStream" uid="uid://d2rjx4kas5i3f" path="res://Audio/click-button.mp3" id="2_g7sr1"]
[ext_resource type="AudioStream" uid="uid://clgnryx6v4ui8" path="res://Audio/hover-button.mp3" id="3_h2c5g"]
[ext_resource type="AudioStream" uid="uid://cab78ss4hkhd5" path="res://Audio/explosion-nearby.mp3" id="4_s307d"]
[ext_resource type="AudioStream" uid="uid://q0uvxx2wapdg" path="res://Audio/knight-right-footstep-on-gravel-4-with-chainmail.mp3" id="5_gwkvp"]

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_ow54q"]
random_pitch = 1.2
streams_count = 1
stream_0/stream = ExtResource("5_gwkvp")
stream_0/weight = 1.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_yesky"]
playback_mode = 1
random_pitch = 1.3
streams_count = 1
stream_0/stream = ExtResource("5_gwkvp")
stream_0/weight = 1.0

[node name="SoundManager" type="Node"]
script = ExtResource("1_8kq0e")

[node name="ButtonPress" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_g7sr1")
volume_db = -25.0
pitch_scale = 1.25
bus = &"UI"

[node name="ButtonHover" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_h2c5g")
volume_db = -25.0
bus = &"UI"

[node name="MineExplosion" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_s307d")
volume_db = -2.0
bus = &"FX"

[node name="FlagSound" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_ow54q")
volume_db = -10.0
pitch_scale = 0.8
bus = &"FX"

[node name="TileReveal" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_yesky")
volume_db = -10.0
pitch_scale = 1.2
max_polyphony = 3
bus = &"FX"
